--- a/view.css
+++ b/view.css
@@ -59,6 +59,9 @@ a{
     overflow: hidden;
     padding: .2rem
 }
+.gridpart.disabled{
+    pointer-events: none;
+}
 .gridpart.disabled .cover img{
     background-image: url('/Präsentation NXT/no-img.png');
     height: 100%;
@@ -66,7 +69,6 @@ a{
 }
 .gridpart.disabled:hover{
     filter: none;
-    cursor: not-allowed;
 }
 .gridpart .name{
     font-size: 200%;
