--- a/view.css
+++ b/view.css
@@ -112,6 +112,17 @@ a{
     margin-top: 2rem;
 }
 
+@media (min-width: 1500px) {
+    #grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    .gridpart{
+        width: 100%;
+    }
+    .gridpart .cover{
+        height: 25.5rem;
+    }
+}
 @media (max-width: 1500px) {
     #grid {
       grid-template-columns: repeat(3, 1fr);
