--- a/view.css
+++ b/view.css
@@ -38,13 +38,13 @@ a{
     align-items: center;
 }
 #grid{
-    width: 92%;
+    max-width: 100lvw;
     margin-top: 2rem;
     display: grid;
     grid-gap: 4rem;
 }
 .gridpart{
-    width: 80%;
+    width: 33%;
     height: auto;
     border-radius: 5px;
     border: solid black 2px;
@@ -55,7 +55,7 @@ a{
     filter: drop-shadow(0px 0px 10px #313131);
 }
 .gridpart .cover{
-    height: 15rem;
+    aspect-ratio: 16/9;
     overflow: hidden;
     padding: .2rem
 }
@@ -117,7 +117,7 @@ a{
       grid-template-columns: repeat(3, 1fr);
     }
     .gridpart{
-        width: 100%;
+        width: auto;
     }
     .gridpart .cover{
         height: 18.5rem;
@@ -128,7 +128,7 @@ a{
       grid-template-columns: repeat(3, 1fr);
     }
     .gridpart{
-        width: 100%;
+        width: auto;
     }
     .gridpart .cover{
         height: 8rem;
@@ -149,7 +149,7 @@ a{
       grid-template-columns: repeat(2, 1fr);
     }
     .gridpart{
-        width: 100%;
+        width: auto;
     }
     .gridpart .cover{
         height: 8rem;
@@ -161,7 +161,7 @@ a{
       grid-template-columns: repeat(1, 1fr);
     }
     .gridpart{
-        width: 90%;
+        width: auto;
         margin-inline: auto;
     }
     .gridpart .cover{
